[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "orbis/templates/map.html" },
    { path = "orbis/templates/index.html" }
]
name = "orbis-unum"
version = "1.1.1"
description = "🌍 IP Geolocator & Coordinate Mapper 📍"
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/rly0nheart/orbis-unum"
repository = "https://github.com/rly0nheart/orbis-unum"
keywords = ["mapping", "geolocation", "reverse-geolocation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "*"
rich = "*"
rich-argparse = "*"
jinja2 = "*"
flask = "*"

[tool.poetry.scripts]
orbis = "orbis_unum.main:orbis"
orbis-cli = "orbis_unum.main:orbis_cli"
orbis-web = "orbis_unum.main:orbis_web"
